--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="site.css" type="text/css" />
-    <title>Document</title>
+    <style>
+      h1 {
+        font-size: 3em;
+        margin-top: 0.5em;
+      }
+
+      .banner {
+        max-width: 100%;
+      }
+
+      .sub-title {
+        background-color: #fff;
+        font-size: 1.5em;
+        padding: 10px;
+      }
+    </style>
+    <title>Bethany's Pie Shop</title>
   </head>
   <body>
     <header>
@@ -17,20 +33,23 @@
       </nav>
     </header>
     <main>
-      <aside><img src="./images/logo.png" alt="Bethany's Pie Shop" /></aside>
+      <aside>
+        <img src="./images/logo.png" alt="Bethany's Pie Shop" />
+      </aside>
       <article>
         <img
           src="./images/banner.png"
           class="banner"
           alt="Bethany's Pie Shop"
         />
+        <h1>Welcome to Bethany's Pie Shop</h1>
+        <p class="sub-title">
+          From pecan to plum, our pies are made in with the warmth and tradition
+          of home. Take a moment to <a href="pies.html">browse our pies</a> and
+          see which of our delectable desserts are soon to arrive on your
+          doorstep
+        </p>
       </article>
-      <h1>Welcome to Bethany's Pie Shop</h1>
-      <p class="sub-title">
-        From pecan to plum, our pies are made in with the warmth and tradition
-        of home. Take a moment to <a href="pies.html">browse our pies</a> and
-        see which of our delectable desserts are soon to arrive on your doorstep
-      </p>
     </main>
     <footer>
       <nav>
