--- a/pies.html
+++ b/pies.html
@@ -19,23 +19,27 @@
     </header>
     <main>
       <aside>
-        <img src="./images/logo.png" alt="Bethany's Pie Shop" />
+        <img src="images/logo.png" alt="Bethany's Pie Shop" />
       </aside>
+
       <article>
+        <h1>Pies</h1>
+
         <section class="columns-desktop">
           <div class="pie">
-            <img src="./images/apple-pie.png" alt="Apple Pie" />
+            <img src="images/apple-pie.png" alt="Apple Pie" />
             <div class="columns">
-              <div class="tittle">Apple Pie</div>
+              <div class="title">Apple Pie</div>
               <div class="price">$12.95</div>
             </div>
             <p class="desc">Our famous apple pie</p>
             <button data-order="apple-pie">Order</button>
           </div>
+
           <div class="pie">
-            <img src="./images/cherry-pie.png" alt="Cherry Pie" />
+            <img src="images/cherry-pie.png" alt="Chery Pie" />
             <div class="columns">
-              <div class="tittle">Cherry Pie</div>
+              <div class="title">Cherry Pie</div>
               <div class="price">$15.95</div>
             </div>
             <p class="desc">A summer classic!</p>
@@ -44,6 +48,7 @@
         </section>
       </article>
     </main>
+
     <footer>
       <nav>
         <ul>
@@ -54,4 +59,28 @@
       </nav>
     </footer>
   </body>
+  <script>
+    window.addEventListener("DOMContentLoaded", function (e) {
+      const orderButtons = document.querySelectorAll("button[data-order]");
+
+      orderButtons.forEach(function (button) {
+        button.addEventListener("click", function (e) {
+          const button = e.currentTarget;
+          const container = button.parentNode;
+
+          const order = {
+            id: (id = button.getAttribute("data-order")),
+            title: container.querySelector(".title").innerText,
+            price: container.querySelector(".price").innerText,
+            desc: container.querySelector(".desc").innerText,
+          };
+
+          localStorage.setItem("order", JSON.stringify(order));
+
+          const url = window.location.href.replace("pies.html", "order.html");
+          window.location.href = url;
+        });
+      });
+    });
+  </script>
 </html>
